syntax = "proto3";

package tenant;

// === Commands ===

message CreateTenant {
    string tenant_id = 1; // Typically a UUID generated by the caller/API layer
    string name = 2;      // Name of the Virtual Airline / Tenant
    // Add other initial tenant settings if needed
}

// === Events ===

message TenantCreated {
    string tenant_id = 1;
    string name = 2;
    string timestamp = 3; // ISO 8601 timestamp
}
